buildscript {
    repositories {
        maven {
            url = "https://maven.minecraftforge.net/"
        }
        maven {
            url = "https://libraries.minecraft.net/"
        }
        maven {
            url = "https://plugins.gradle.org/m2/"
        }
        maven {
            url = "https://repo.spongepowered.org/maven/"
        }
        maven {
            url = "https://maven.parchmentmc.org/"
        }
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
        classpath "org.spongepowered:mixingradle:0.7-SNAPSHOT"
        classpath "org.parchmentmc:librarian:1.+"
    }
}

apply plugin: "net.minecraftforge.gradle"
apply plugin: "org.parchmentmc.librarian.forgegradle"
apply plugin: "org.spongepowered.mixin"
apply plugin: "eclipse"
apply plugin: "maven-publish"

repositories {
    jcenter()
    mavenCentral()
    flatDir {
        dirs "libs"
    }
    maven {
        url = "https://libraries.minecraft.net/"
    }
    maven {
        url = "https://maven.minecraftforge.net/"
    }
    maven {
        url = "https://repo.spongepowered.org/maven"
    }
    maven {
        url = "https://dvs1.progwml6.com/files/maven/"
        content {
            includeGroup "mezz.jei"
            includeGroup "slimeknights.mantle"
            includeGroup "slimeknights.tconstruct"
        }
    }
    maven {
        url = "https://maven.blamejared.com/"
        content {
            includeGroup "blusunrize.immersiveengineering"
            includeGroup "com.blamejared.crafttweaker"
            includeGroup "net.darkhax.openloader"
            includeGroup "vazkii.patchouli"
        }
    }
    maven {
        url = "https://maven.theillusivec4.top/"
        content {
            includeGroup "top.theillusivec4.curios"
        }
    }
    maven {
        url = "https://maven.architectury.dev/"
        content {
            includeGroup "dev.architectury"
        }
    }
    maven {
        url = "https://maven.saps.dev/releases/"
        content {
            includeGroup "dev.ftb.mods"
            includeGroup "dev.latvian.mods"
        }
    }
    maven {
        url = "https://maven.tterrag.com/"
        content {
            includeGroup "com.simibubi.create"
        }
    }
    maven {
        url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
        content {
            includeGroup "software.bernie.geckolib"
        }
    }
    maven {
        url = "https://maven.covers1624.net/"
        content {
            includeGroup "com.teamcofh"
        }
    }
    maven {
        url = "https://pkgs.dev.azure.com/Kotori316/minecraft/_packaging/mods/maven/v1/"
        content {
            includeGroup "com.kotori316"
        }
    }
    maven {
        url = "https://jenkins.bdew.net/maven/"
        content {
            includeGroup "net.bdew"
        }
    }
    maven {
        url = "https://repo.repsy.io/mvn/klikli-dev/mods/"
        content {
            includeGroup "com.klikli_dev"
        }
    }
    maven {
        url = "https://jitpack.io/"
    }
    maven {
        url = "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url = "https://modmaven.dev/"
    }
}

sourceSets {
    main
}

version = "4.2.6.11"
group = "thelm.jaopca"
archivesBaseName = "JAOPCA-1.19.2"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: "parchment", version: "2022.10.16-1.19.2"
    runs {
        client = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run")
            source sourceSets.main
        }
        server = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run")
            source sourceSets.main
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.19.2-43.2.4"
    annotationProcessor "org.spongepowered:mixin:0.8.4:processor"

    implementation fg.deobf("mezz.jei:jei-1.19.2-forge:11.6.0.1010")
    implementation fg.deobf("com.blamejared.crafttweaker:CraftTweaker-forge-1.19.2:10.1.35")
    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.19.2-5.1.2.2")
    implementation fg.deobf("software.bernie.geckolib:geckolib-forge-1.19:3.1.39")
    implementation fg.deobf("vazkii.patchouli:Patchouli:1.19.2-77")
    //implementation fg.deobf("slimeknights.mantle:Mantle:1.19-1.10.+")
    implementation fg.deobf("com.teamcofh:cofh_core:1.19.2-10.2.1.40")
    implementation fg.deobf("com.teamcofh:thermal_core:1.19.2-10.2.0.5")
    implementation fg.deobf("dev.latvian.mods:rhino-forge:1902.2.2-build.264")
    implementation fg.deobf("dev.architectury:architectury-forge:6.5.69")
    implementation fg.deobf("dev.ftb.mods:ftb-library-forge:1902.3.13-build.175") {
        transitive = false
    }
    implementation("com.kotori316:scalablecatsforce:2.13.8-build-8:with-library") {
        transitive = false
    }
    implementation fg.deobf("net.bdew:bdlib:1.25.0.5-mc1.19.2")
    implementation fg.deobf("com.klikli_dev:modonomicon:1.19.2-1.25.0")
    implementation fg.deobf("dev.latvian.mods:kubejs-forge:1902.6.0-build.142") {
        transitive = false
    }
    implementation fg.deobf("net.darkhax.openloader:OpenLoader-Forge-1.19.2:15.0.1")
    implementation fg.deobf("blusunrize.immersiveengineering:ImmersiveEngineering:1.19.2-9.1.2-159")
    implementation fg.deobf("com.simibubi.create:create-1.19.2:0.5.0.i-23:all")
    //implementation fg.deobf("slimeknights.tconstruct:TConstruct:1.19-3.6.+")
    implementation fg.deobf("mekanism:Mekanism:1.19.2-10.3.8.477")
    implementation fg.deobf("mekanism:Mekanism:1.19.2-10.3.8.477:generators")
    implementation fg.deobf("dev.ftb.mods:ftb-industrial-contraptions:1900.1.7-build.221") {
        transitive = false
    }
    implementation fg.deobf("com.teamcofh:thermal_foundation:1.19.2-10.2.0.47")
    implementation fg.deobf("com.teamcofh:thermal_expansion:1.19.2-10.2.0.21")
    implementation fg.deobf("com.teamcofh:thermal_integration:1.19.2-10.2.0.17")
    //implementation fg.deobf("redsnakegames.mcenderdragon:futurepack:1.19-34.+")
    implementation fg.deobf("net.bdew:factorium:1.4.0.4-mc1.19.2")

    //JitPack

    //CurseMaven
    implementation fg.deobf("curse.maven:shutup-experimental-settings-407174:3759881")
    implementation fg.deobf("curse.maven:ato-405593:4046926")
    implementation fg.deobf("curse.maven:allthemodium-364466:4402276")
    implementation fg.deobf("curse.maven:electrodynamics-316867:4399782")
    implementation fg.deobf("curse.maven:voluminous-energy-416704:4360482")
    implementation fg.deobf("curse.maven:cyclops-core-232758:4392595")
    implementation fg.deobf("curse.maven:common-capabilities-247007:4391413")
    implementation fg.deobf("curse.maven:integrated-dynamics-236307:4391520")
    implementation fg.deobf("curse.maven:essentials-293752:4394651")
    implementation fg.deobf("curse.maven:crossroads-mc-250231:4397746")
    implementation fg.deobf("curse.maven:assemblylinemachines-388282:3964948")
    implementation fg.deobf("curse.maven:smartbrainlib-661293:4312502")
    implementation fg.deobf("curse.maven:occultism-361026:4404085")
    implementation fg.deobf("curse.maven:cyclic-239286:4075141")
    implementation fg.deobf("curse.maven:industrial-reborn-358877:4076608")
    implementation fg.deobf("curse.maven:ic2-classic-242942:4348706")
    implementation fg.deobf("curse.maven:silent-lib-242998:3968715")
    implementation fg.deobf("curse.maven:silents-mechanisms-326258:4392434")
    implementation fg.deobf("curse.maven:silents-gems-220311:4181316")
    implementation fg.deobf("curse.maven:silent-gear-297039:4370101")
}

jar {
    manifest {
        attributes([
                "Specification-Title": "JAOPCA",
                "Specification-Vendor": "thelm",
                "Specification-Version": "4",
                "Implementation-Title": "${archivesBaseName}",
                "Implementation-Version": "${version}",
                "Implementation-Vendor": "thelm",
                //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConnector": "thelm.jaopca.mixins.JAOPCAMixinConnector"
        ],)
    }
}

mixin {
    add sourceSets.main, "jaopca.refmap.json"
}
